[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "module_env"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
license = {text = "GPLv3"}
description = "Context manage-able module-environments for python!"
urls = {Homepage = "https://github.com/zwimer/module_env"}
requires-python = ">= 3.10"
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools]
license-files = ["LICENSE"]
include-package-data = false

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools.package-data]
module_env = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "module_env.__version__"}

# Tools

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.ruff]
ignore=["E731"]
line-length = 120
[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
disable = "unspecified-encoding,missing-module-docstring,too-few-public-methods,missing-class-docstring,missing-function-docstring"

